# SmartFridgeGuardian

./: .gitattributes  .gitignore  README.md  README_EN.md  index.html  style.css
arduino/: CameraWebServer.ino  README.md  app_httpd.cpp  app_httpd.h  aws_upload.cpp  aws_upload.h  camera_pins.h
fridge_manager_backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
fridge_manager_backend/apps/api/: apps.py  urls.py
fridge_manager_backend/apps/core/: views.py
fridge_manager_backend/apps/fridges/: admin.py  apps.py  models.py  services.py  urls.py  views.py
fridge_manager_backend/apps/fridges/migrations/: 0001_initial.py  0002_initial.py
fridge_manager_backend/apps/inventory/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
fridge_manager_backend/apps/inventory/migrations/: 0001_initial.py
fridge_manager_backend/apps/photos/: admin.py  apps.py  models.py  urls.py  views.py
fridge_manager_backend/apps/photos/migrations/: 0001_initial.py
fridge_manager_backend/apps/users/: apps.py  forms.py  urls.py  views.py
fridge_manager_backend/fridge_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fridge_manager_backend/templates/: base.html
fridge_manager_backend/templates/core/: home.html
fridge_manager_backend/templates/fridges/: fridge_list_user.html  fridge_select_operation.html  list.html  operation_status.html
fridge_manager_backend/templates/inventory/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html  user_item_list.html
fridge_manager_backend/templates/photos/: photo_detail.html  photo_list.html
fridge_manager_backend/templates/users/: login.html  logout.html  register.html
