# fridge_manager/pyproject.toml

[project]
name = "fridge_manager"
version = "0.1.0"
description = "公共冰箱倉儲管理系統"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.2.1",
    "python-dotenv>=1.0.0",
    "Pillow>=10.2.0",
    "django-storages>=1.14.2",
    "boto3>=1.34.34",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.9",
    "openai>=1.12.0",
    "djangorestframework>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 errors)
    "W",   # pycodestyle warnings (PEP 8 warnings)
    "F",   # pyflakes (potential bugs/errors)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions (list/dict/set comprehensions)
    "UP",  # pyupgrade (modernize code)
    "S",   # flake8-bandit (basic security implications)
    "A",   # flake8-builtins (shadowing builtins)
    "SIM", # flake8-simplify (simplify code)
    "ISC", # flake8-implicit-str-concat (implicit string concatenation)
    "PL",  # pylint (subset of pylint rules)
]
ignore = [
    "E501",  # line too long, handled by black (如果您用 Black 格式化，這是常見配置)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"] # 假設您有 tests 目錄
# 您可能需要為 Django 的 migrations 文件添加忽略，例如:
"fridge_manager/migrations/*" = ["E", "W", "F", "I", "B", "C4", "UP", "S", "A", "SIM", "ISC", "PL"] # 幾乎忽略所有

[tool.ruff.lint.pydocstyle]
convention = "google" # 文檔字符串風格